# FDTech_QRDisplay_V2_02

./: .cproject  CMakeLists.txt  Makefile  _cproject.xml  _project.xml  partitions.csv
FDTech_QRDisplay_V2_02/: .project  sdkconfig  sdkconfig.old
FDTech_QRDisplay_V2_02/main/: CMakeLists.txt  checksum.h  component.mk  main.c  main.h  networks.h  ota.c  ota.h  qrcode.h  spiffs.c
FDTech_QRDisplay_V2_02/main/components/images/: component.mk
FDTech_QRDisplay_V2_02/main/components/tft/: dsdigi.c  dw_font.c  font_th_sarabunpsk_regular40.c  tft.h
main/: checksum.c  esp_https_ota.c  networks.c  spiffs.h  tft.c
main/components/tft/: tft.c  tftspi.h
