idf_component_register(SRCS "checksum.c"
                            "esp_https_ota.c"
                            "main.c"
                            "networks.c"
                            "ota.c"
                            "qrcode.c"
                            "spiffs.c"
                            "tft.c"
                            "components/spidriver/spi_master_lobo.c"
                            "components/tft/comic24.c"
                            "components/tft/def_small.c"
                            "components/tft/DefaultFont.c"
                            "components/tft/DejaVuSans18.c"
                            "components/tft/DejaVuSans24.c"
                            "components/tft/dw_font.c"
                            "components/tft/font_th_sarabunpsk_regular40.c"
                            "components/tft/minya24.c"
                            "components/tft/SmallFont.c"
                            "components/tft/tft.c"
                            "components/tft/tftspi.c"
                            "components/tft/tooney32.c"
                            "components/tft/Ubuntu16.c"
                            "components/tft/dsdigi.c"
                    INCLUDE_DIRS "." "components"
                    EMBED_FILES "components/images/bluepay.jpg"
							"components/images/bluepay_press.jpg"
							"components/images/bottom1.jpg"
							"components/images/bottom1_press.jpg"
							"components/images/bottom2.jpg"
							"components/images/bottom2_press.jpg"
							"components/images/promppay.jpg"
							"components/images/promppay_press.jpg"
							"components/images/rabbitline.jpg"
							"components/images/rabbitline_press.jpg"
							"components/images/topmenu.jpg"
							"components/images/truemoney.jpg"
							"components/images/truemoney_press.jpg"
							"components/images/header_coins.jpg"
							"components/images/footer_coins.jpg"
					EMBED_TXTFILES "v3apptst1_cert.pem")